# NeuralNetwork

./: .gitignore  CMakeLists.txt  README.md
src/app/: CMakeLists.txt  NeuralNetworkConfiguration.cpp  NeuralNetworkConfiguration.h  NeuralNetworkGenotype.cpp  NeuralNetworkGenotype.h  NeuralNetworkPopulation.cpp  NeuralNetworkPopulation.h  NeuralNetworkSpecification.cpp  NeuralNetworkSpecification.h  NeuroEvolutionEnvironment.cpp  NeuroEvolutionEnvironment.h  main.cpp
src/app/element/: QtPopulationListItem.cpp  QtPopulationListItem.h
src/app/neural_network/: NeuralEdgeGroup.cpp  NeuralEdgeGroup.h  NeuralNodeGroup.cpp  NeuralNodeGroup.h
src/app/utility/: Matrix.h
src/app/utility/cl/: ClSystem.cpp  ClSystem.h
src/app/utility/random/: RandomNumberGenerator.cpp  RandomNumberGenerator.h  WeightedRandomGenerator.h
src/app/view/: QtEvolutionView.cpp  QtEvolutionView.h  QtPopulationExchangeView.cpp  QtPopulationExchangeView.h
src/app/window/: QtMainWindow.cpp  QtMainWindow.h
src/app/window/content/: QtMainContent.cpp  QtMainContent.h
src/lib/: CMakeLists.txt
src/lib/evolution/: EvaluatedGenotype.h  EvolutionEnvironment.h
src/lib/neural_network/: NeuralEdgeGroup.cpp  NeuralEdgeGroup.h  NeuralNetwork.cpp  NeuralNetwork.h  NeuralNetworkConfiguration.cpp  NeuralNetworkConfiguration.h  NeuralNodeGroup.cpp  NeuralNodeGroup.h  NeuralNodeGroupLinearExcitation.cpp  NeuralNodeGroupLinearExcitation.h  NeuralNodeGroupStepExcitation.cpp  NeuralNodeGroupStepExcitation.h
src/lib/neural_network/cpu/: NeuralEdgeGroupCpu.cpp  NeuralEdgeGroupCpu.h  NeuralNetworkCpu.cpp  NeuralNetworkCpu.h  NeuralNodeGroupCpu.cpp  NeuralNodeGroupCpu.h  NeuralNodeGroupLinearExcitationCpu.cpp  NeuralNodeGroupLinearExcitationCpu.h  NeuralNodeGroupStepExcitationCpu.cpp  NeuralNodeGroupStepExcitationCpu.h
src/lib/neural_network/gpu/: NeuralEdgeGroupGpu.cpp  NeuralEdgeGroupGpu.h  NeuralNetworkGpu.cpp  NeuralNetworkGpu.h  NeuralNodeGroupGpu.cpp  NeuralNodeGroupGpu.h  NeuralNodeGroupLinearExcitationGpu.cpp  NeuralNodeGroupLinearExcitationGpu.h  NeuralNodeGroupStepExcitationGpu.cpp  NeuralNodeGroupStepExcitationGpu.h
src/lib/utility/: Histogram.cpp  Histogram.h  Matrix.h  Optional.h  Profiler.cpp  Profiler.h  ScopedProfileTracer.cpp  ScopedProfileTracer.h  TextAccess.cpp  TextAccess.h  logging.h  types.h  utility.h  utilityRandom.cpp  utilityRandom.h  utilityString.cpp  utilityString.h
src/lib/utility/random/: WeightedRandomGenerator.h
src/test/: CMakeLists.txt  ClSystemTestSuite.h  MatrixTestSuite.h  NeuralEdgeGroupCpuTestSuite.h  NeuralEdgeGroupGpuTestSuite.h  NeuralEdgeGroupTestSuite.h  NeuralNetworkCpuTestSuite.h  NeuralNetworkGpuTestSuite.h  NeuralNetworkTestSuite.h  NeuralNodeGroupCpuTestSuite.h  NeuralNodeGroupGpuTestSuite.h  NeuralNodeGroupTestSuite.h
